--- a/i3/config
+++ b/i3/config
@@ -33,7 +33,7 @@ tiling_drag modifier titlebar
 
 bindsym $mod+q exec nautilus
 
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec kitty
 bindsym $mod+Shift+q kill
 
 bindsym $mod+d exec --no-startup-id dmenu_run
