--- a/i3/config
+++ b/i3/config
@@ -27,7 +27,7 @@ for_window [window_role="pop-up"] floating enable
 for_window [window_role="task_dialog"] floating enable
 
 # make xdman fload
-for_window [class="xdman-Main"] floating enable
+for_window [class="xdman"] floating enable
 floating_modifier $mod
 tiling_drag modifier titlebar
 
