Update background color in colors.ini

--- a/polybar/forest/colors.ini
+++ b/polybar/forest/colors.ini
@@ -12,7 +12,7 @@
 ;; Use pywal.sh in scripts directory to use colors from an image/wallpaper.
 
 ;; main colors
-background = #282A36
+background = #282a3610
 foreground = #F8F8F2
 sep = #3F5360
 
