--- a/polybar/forest/config.ini
+++ b/polybar/forest/config.ini
@@ -61,7 +61,7 @@ fixed-center = true
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in a width or height of 50% minus 10 pixels
 width = 100%
-height = 34
+height = 28
 
 ; Offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 ; the percentage can optionally be extended with a pixel offset like so:
@@ -130,9 +130,9 @@ module-margin-right = 1
 ;   font-3 = FontAwesome:size=10
 ; See the Fonts wiki page for more details
 
-font-0 = "Iosevka Nerd Font:size=10;4"
-font-1 = "Iosevka Nerd Font:size=10;3"
-font-2 = "feather:size=12;3"
+font-0 = "Iosevka Nerd Font:size=9;4"
+font-1 = "Iosevka Nerd Font:size=9;3"
+font-2 = "feather:size=11;3"
 
 ; Modules are added to one of the available blocks
 ;   modules-left = cpu ram
@@ -141,7 +141,7 @@ font-2 = "feather:size=12;3"
 
 modules-left = launcher sep workspaces sep cpu memory filesystem
 modules-center = sep date
-modules-right = battery network sep volume brightness sep sysmenu
+modules-right =  network battery sep volume sep sysmenu
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -289,6 +289,6 @@ compositing-border = over
 
 ; Enables pseudo-transparency for the bar
 ; If set to true the bar can be transparent without a compositor.
-pseudo-transparency = false
+pseudo-transparency = true
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
