Delete mpd in bar

--- a/polybar/shapes/preview.ini
+++ b/polybar/shapes/preview.ini
@@ -145,7 +145,7 @@ font-1 = "Iosevka Nerd Font:style=Medium:size=22;5"
 inherit = bar/main
 offset-y = 10
 modules-left = launcher left1 title left2
-modules-center = workspaces sep mpd
+modules-center = workspaces
 modules-right = right7 color-switch right6 updates right5 alsa right4 battery right3 network right2 date right1 sysmenu
 enable-ipc = true
 
@@ -153,7 +153,7 @@ enable-ipc = true
 offset-y = 52
 inherit = bar/main
 modules-left = volume left1 brightness left2
-modules-right = right7 cpu_bar right6 memory_bar right5 filesystem_bar right4 mpd_bar right3 battery_bar
+modules-right = right7 cpu_bar right6 memory_bar right5 filesystem_bar right4 right3 battery_bar
 enable-ipc = true
 
 [bar/bottom]
