--- a/polybar/material/colors.ini
+++ b/polybar/material/colors.ini
@@ -12,8 +12,8 @@
 ;; Use pywal.sh in scripts directory to use colors from an image/wallpaper.
 
 ;; main colors
-background = #1F1F1F
-foreground = #FFFFFF
+background = #282a3610
+foreground = #F8F8F2
 foreground-alt = #8F8F8F
 module-fg = #1F1F1F
 primary = #ffb300
