--- a/polybar/hack/colors.ini
+++ b/polybar/hack/colors.ini
@@ -12,8 +12,8 @@
 ;; Use pywal.sh in scripts directory to use colors from an image/wallpaper.
 
 ;; main colors
-background = #263238
-foreground = #DFDFDF
+background = #282a3610
+foreground = #F8F8F2
 primary = #00BCD4
 red = #FF5250
 green = #43a047
