--- a/polybar/grayblocks/colors.ini
+++ b/polybar/grayblocks/colors.ini
@@ -12,8 +12,8 @@
 ;; Use pywal.sh in scripts directory to use colors from an image/wallpaper.
 
 ;; main colors
-background = #272727
-background-alt = #383838
+background = #282a3610
+foreground = #F8F8F
 foreground = #CACACA
 foreground-alt = #CACACA
 primary = #e53935
